testdata/baselines/reference/submodule/conformance/parseClassDeclarationInStrictModeByDefaultInES6.errors.txt
parseClassDeclarationInStrictModeByDefaultInES6.ts(6,9): error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'arguments'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
parseClassDeclarationInStrictModeByDefaultInES6.ts(6,9): error TS2322: Type 'string' is not assignable to type 'IArguments'.


==== parseClassDeclarationInStrictModeByDefaultInES6.ts (2 errors) ====
    class C {
        interface = 10;
        public implements() { }
        public foo(arguments: any) { }
        private bar(eval:any) {
            arguments = "hello";
            ~~~~~~~~~
!!! error TS1210: Code contained in a class is evaluated in JavaScript's strict mode which does not allow this use of 'arguments'. For more information, see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Strict_mode.
            ~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'IArguments'.
        }
    }